# architecture-bionicpro

./: .editorconfig  .gitignore  README.md  docker-compose.cdn.yaml  docker-compose.etl.yaml  docker-compose.yaml
bionicpro-airflow/: Dockerfile  pyproject.toml
bionicpro-airflow/dags/: crm_to_clickhouse.py
bionicpro-airflow/init/: create_connections.sh
bionicpro-auth/: Dockerfile  main.py  pyproject.toml
bionicpro-auth/src/: api.py  client.py  config.py  di.py  storage.py
bionicpro-auth/src/utils/: cryptography.py  requests.py
bionicpro-cdn/: nginx.conf
bionicpro-crm/: postgresql.conf
bionicpro-crm/init/: 01_schema.sql  02_seed.sql  03_debezium.sql  04_pg_hba.sh  05_connector_postgres.json  06_curl.http
bionicpro-report/: Dockerfile  main.py  pyproject.toml
bionicpro-report/src/: api.py  builder.py  clients.py  config.py  di.py  models.py  s3.py
clickhouse/init/: 01_base.sql  02_kafka.sql  03_raw.sql  04_mv.sql  05_stg.sql
clickhouse/users.d/: default.xml
frontend/src/: App.tsx
frontend/src/components/: ReportPage.tsx
keycloak/: realm-export.json
schemas/: Makefile  likec4.config.json  model.c4
